--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
@@ -10,13 +10,16 @@
     }
 }
 
-<div class="facet-body-inner facet-body-rating">
+<div class="facet-body-inner facet-body-rating" role="listbox" aria-labelledby="facet-group-header-@Model.Key">
     @foreach (var facet in facets)
     {
-        <div class="facet-item facet-radio" data-href="@Url.FacetToggle(facet)" title="@facet.Value.Label">
-            <label>
-                <input class="facet-control-native" type="radio" name="optradio-@(Model.Key)" value="@facet.Value.ToString()" attr-checked='(facet.Value.IsSelected, "checked")' tabindex="-1" />
-                <span class="facet-control-ui" tabindex="0"></span>
+        <div class="facet-item facet-radio" title="@facet.Value.Label">
+            <label for="optradio-@(facet.Value.Key)">
+                <span class="facet-control-ui" 
+                      tabindex="0" 
+                      role="option" 
+                      aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
+                      aria-label="@(facet.Value.Label ?? facet.Value.ToString())"></span>
                 <span class="facet-label has-count" attr-data-count='(facet.HitCount > 0, facet.HitCount.ToString("N0"))'>
                     <span class="rating">
                         <span style="width: @(facet.Value.Value.Convert<int>() * 20)%"></span>
@@ -25,5 +28,18 @@
                 </span>
             </label>
         </div>
+    }
+</div>
+
+<div role="radiogroup">
+    @foreach (var facet in facets)
+    {
+        <input class="facet-control-native sr-only" 
+               type="radio" 
+               name="optradio-@(Model.Key)" 
+               id="optradio-@(facet.Value.Key)" 
+               value="@facet.Value.ToString()"
+               attr-checked='(facet.Value.IsSelected, "checked")' 
+               data-href="@Url.FacetToggle(facet)" />
     }
 </div>
