--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/SingleSelect.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/SingleSelect.cshtml
@@ -2,15 +2,18 @@
 
 @model FacetGroup
 
-<div class="facet-body-inner@(Model.IsScrollable ? " scrollable custom-scrollbar" : "")">
+<div class="facet-body-inner" attr-class='(Model.IsScrollable, "scrollable custom-scrollbar")' role="listbox" aria-labelledby="facet-group-header-@Model.Key">
     @foreach (var facet in Model.Facets)
     {
         if (facet.Published)
         {
-            <div class="facet-item facet-radio" data-href="@Url.FacetToggle(facet)">
-                <label>
-                    <input class="facet-control-native" type="radio" name="optradio-@(Model.Key)" value="@facet.Value.ToString()" attr-checked='(facet.Value.IsSelected, "checked")' tabindex="-1" />
-                    <span class="facet-control-ui" tabindex="0"></span>
+            <div class="facet-item facet-radio">
+                <label for="optradio-@(facet.Value.Key)">
+                    <span class="facet-control-ui" 
+                          role="option" 
+                          tabindex="0"
+                          aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
+                          aria-label="@(facet.Value.Label ?? facet.Value.ToString())"></span>
                     <span class="facet-label has-count" attr-data-count='(facet.HitCount > 0, facet.HitCount.ToString("N0"))'>
                         @(facet.Value.Label ?? facet.Value.ToString())
                     </span>
@@ -19,3 +22,17 @@
         }
     }
 </div>
+
+@foreach (var facet in Model.Facets)
+{
+    if (facet.Published)
+    {
+        <input class="facet-control-native sr-only" 
+               type="radio" 
+               id="optradio-@(facet.Value.Key)" 
+               name="optradio-@(Model.Key)" 
+               value="@facet.Value.ToString()" 
+               attr-checked='(facet.Value.IsSelected, "checked")' 
+               data-href="@Url.FacetToggle(facet)" />
+    }
+}
