--- a/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
@@ -18,6 +18,8 @@
         "Common.EscKey",
         "Common.DontAskAgain",
         "Common.DontShowAgain",
+        "Common.MoveUp",
+        "Common.MoveDown",
         "Common.CopyToClipboard",
         "Common.CopyToClipboard.Failed",
         "Common.CopyToClipboard.Succeeded",
