--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
@@ -39,7 +39,12 @@
         <div class="fu-progress">
             <!-- The single upload progress bar -->
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" 
+                     role="progressbar" 
+                     style="width: 0%" 
+                     aria-valuemin="0" 
+                     aria-valuemax="100"
+                     aria-label="@(Model.UploadedFileName.NullEmpty() ?? T("Aria.Label.ProgressBar", Model.Name))"></div>
             </div>
         </div>
     </div>
