--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/Media.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/Media.cshtml
@@ -107,7 +107,12 @@
     <div class="fu-progress">
         <!-- The single upload progress bar -->
         <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" 
+                 role="progressbar" 
+                 style="width: 0%" 
+                 aria-valuemin="0" 
+                 aria-valuemax="100"
+                 aria-label="@(currentFile?.Name.NullEmpty() ?? T("Aria.Label.ProgressBar", string.Empty))"></div>
         </div>
     </div>
 </div>
