--- a/src/Smartstore.Web/Views/Customer/DownloadableProducts.cshtml
+++ b/src/Smartstore.Web/Views/Customer/DownloadableProducts.cshtml
@@ -1,4 +1,5 @@
-﻿@using Smartstore.Web.Models.Customers;
+﻿@using Smartstore.Utilities
+@using Smartstore.Web.Models.Customers
 
 @model CustomerDownloadableProductsModel
 
@@ -108,12 +109,12 @@
                             <tbody id="download-versions">
                                 @foreach (var download in item.DownloadVersions)
                                 {
-                                    var dwlId = download.DownloadId;
+                                    var id = $"download-version-{CommonHelper.GenerateRandomInteger()}";
                                     <tr role="button"
                                         tabindex="0"
                                         data-toggle="collapse" 
-                                        data-target="#download-@dwlId" 
-                                        aria-controls="download-@dwlId"
+                                        data-target="#@id" 
+                                        aria-controls="@id"
                                         aria-expanded="false"
                                         class="download-version">
                                         <td>
@@ -133,7 +134,7 @@
                                             </a>
                                         </td>
                                     </tr>
-                                    <tr id="download-@dwlId" class="download-changelog collapse bg-light">
+                                    <tr id="@id" class="download-changelog collapse bg-light">
                                         <td colspan="3">
                                             <div>
                                                 @if (download.Changelog.HasValue())
