--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
@@ -36,6 +36,7 @@
     {
         <input class="facet-control-native sr-only" 
                type="radio" 
+               tabindex="-1"
                name="optradio-@(Model.Key)" 
                id="optradio-@(facet.Value.Key)" 
                value="@facet.Value.ToString()"
