--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Price.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Price.cshtml
@@ -34,6 +34,7 @@
         {
             <input class="facet-control-native sr-only" 
                    type="radio" 
+                   tabindex="-1"
                    id="optradio-@(facet.Value.Key)" 
                    name="optradio-@(Model.Key)" 
                    value="@facet.Value.ToString()"
