--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/SingleSelect.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/SingleSelect.cshtml
@@ -29,6 +29,7 @@
     {
         <input class="facet-control-native sr-only" 
                type="radio" 
+               tabindex="-1"
                id="optradio-@(facet.Value.Key)" 
                name="optradio-@(Model.Key)" 
                value="@facet.Value.ToString()" 
