--- a/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -19,7 +19,7 @@
                     </div>
 
                     <div id="myaccount-menu" class="collapse nav-collapse" role="region">
-                        <menu name="MyAccount" template="ListGroup" />
+                        <menu name="MyAccount" template="ListGroup" public-name="@T("Account.MyAccount")" />
                     </div>
                 </div>
                 
