WCAG: Identity (wip)

--- a/src/Smartstore.Web/Views/Identity/PasswordRecovery.cshtml
+++ b/src/Smartstore.Web/Views/Identity/PasswordRecovery.cshtml
@@ -12,18 +12,12 @@
     </div>
 
     <div class="page-body">
-        @if (Model.ResultMessage.HasValue())
-        {
-            <div class="alert alert-success">
-                @Model.ResultMessage
-            </div>
-        }
-        else
-        {
-            <p class="lead">
-                @T("Account.PasswordRecovery.Tooltip")
-            </p>
-        }
+        <div sm-if="Model.ResultMessage.HasValue()" class="alert alert-success" role="alert">
+            @Model.ResultMessage
+        </div>
+        <p id="password-recovery-hint" class="lead" attr-class='(Model.ResultMessage.HasValue(), "sr-only")'>
+            @T("Account.PasswordRecovery.Tooltip")
+        </p>
 
         <form asp-route="PasswordRecovery" method="post">
             <div asp-validation-summary="ModelOnly"></div>
@@ -32,9 +26,15 @@
             <div class="form-group row">
                 <div class="col-12 col-lg-8 col-xl-7">
                     <div class="input-group input-group-lg has-icon">
-                        <input asp-for="Email" class="email" type="email" autocomplete="email" placeholder="@Html.DisplayNameFor(m => m.Email)" />
+                        <input asp-for="Email" 
+                               type="email"
+                               class="email" 
+                               autocomplete="email" 
+                               placeholder="@Html.DisplayNameFor(m => m.Email)"
+                               aria-label="@T("Account.PasswordRecovery.Email")"
+                               aria-describedby="password-recovery-hint" />
                         <span class="input-group-icon text-muted">
-                            <i class="icm icm-envelope-open" style="line-height: inherit"></i>
+                            <i class="icm icm-envelope-open" style="line-height: inherit" aria-hidden="true"></i>
                         </span>
                         <span class="input-group-append">
                             <input type="submit" name="send-email" id="send-email" class="btn btn-primary password-recovery-button" value="@T("Common.Submit")" />
