--- a/src/Smartstore.Web/Views/Identity/PasswordRecoveryConfirm.cshtml
+++ b/src/Smartstore.Web/Views/Identity/PasswordRecoveryConfirm.cshtml
@@ -12,7 +12,7 @@
     </div>
 
     <div class="page-body">
-        <div sm-if="Model.Result.HasValue()" class="alert alert-success">
+        <div sm-if="Model.Result.HasValue()" class="alert alert-success" role="alert">
             @Model.Result
         </div>
         
